# openai-rust-responses-sshift

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  TEST_REPORT.md  development_plan.md  independent_audit.md  wrapper_metadata_filters.md
.github/workflows/: ci.yml  release.yml
examples/: basic.rs  code_interpreter.rs  comprehensive_demo.rs  container_expiration_test.rs  container_recovery_demo.rs  conversation.rs  function_calling.rs  gpt5_demo.rs  image_generation.rs  image_generation_builtin.rs  image_guided_generation.rs  image_input.rs  local_and_mcp_tools.rs  mcp_realtime_check.rs  reasoning_demo.rs  streaming.rs  threads.rs  vector_store_tags.rs  web_search_simple.rs
src/: error.rs  lib.rs  tests.rs
src/files/: mod.rs
src/images/: mod.rs  types.rs
src/mcp/: adapter.rs  client.rs  mod.rs  registry.rs  transport.rs  types.rs
src/messages/: mod.rs
src/realtime/: client.rs  mod.rs
src/responses/: mod.rs
src/tests/: registry_test.rs
src/threads/: mod.rs
src/tools/: mod.rs
src/types/: background.rs  config.rs  filters.rs  helpers.rs  item.rs  mod.rs  reasoning.rs  request.rs  response.rs  stream.rs  tools.rs
src/vector_stores/: mod.rs
